--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
-    "@riophae/vue-treeselect": "0.0.38",
+    "@riophae/vue-treeselect": "^0.1.0",
     "axios": "0.18.1",
     "element-ui": "^2.11.1",
     "js-cookie": "2.2.0",
