--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@riophae/vue-treeselect": "^0.1.0",
     "axios": "0.18.1",
     "element-ui": "^2.11.1",
+    "fuse.js": "^3.4.5",
+    "screenfull": "4.2.0",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
